--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
 html,body{
     width: 85%;
     font-family: 'Open Sans', sans-serif;
