--- a/main.css
+++ b/main.css
@@ -6,6 +6,7 @@
 }
 html,body{
     font-family: 'Open Sans';
+    font-size: x-large !important;
 }
 body {
     background-color: #121212;
@@ -26,4 +27,10 @@ h1 {
 .container {
     justify-content: center;
     display: flex;
+}
+select {
+    font-size: x-large !important;
+}
+input {
+    font-size: x-large !important;
 }
