--- a/main.css
+++ b/main.css
@@ -12,13 +12,13 @@
 }
 html,body{
     font-family: 'Open Sans';
-    font-size: 3vh;
+    font-size: 6vw;
 }
 h2 {
-    font-size: 4vh;
+    font-size: 6vw;
 }
 h4 {
-    font-size: 2vh;
+    font-size: 3vw;
 }
 body {
     background-color: #121212;
@@ -35,32 +35,32 @@ fieldset {
 }
 h1 {
     text-align: center;
-    font-size: 7vh;
+    font-size: 10vw;
 }
 .container {
     justify-content: center;
     display: flex;
 }
 select {
-    font-size: 3vh;
+    font-size: 5vw;
     background-color: #515151;
     border: none;
     color: #fff;
-    border-bottom: 2px solid #fff;
+    border-bottom: 4px solid #fff;
 }
 input {
-    font-size: 3vh;
+    font-size: 5vw;
 }
 button:active {
     background-color: #32cd32;
     color: #cd32cd;
 }
 input.checkbig {
-  width: 3vh;
-  height: 3vh;
+  width: 5vw;
+  height: 5vw;
 }
 textarea {
-    font-size: 2vh;
+    font-size: 3vw;
 }
 input[class='incnum'] {
     font-family: Seven Segment;
@@ -68,7 +68,7 @@ input[class='incnum'] {
     border-style: hidden;
     background-color: #515151;
     color: #32cd32 !important;
-    font-size: 3.5vh !important;
+    font-size: 7vw !important;
     vertical-align: -0.25rem;
     text-shadow: 0.0825rem 0.0825rem 0.1850rem green; 
 }
