--- a/src/browse.ejs
+++ b/src/browse.ejs
@@ -30,6 +30,7 @@
     <div class="container" id="search" style="display: <%= displaySearch %>;"> <!--flex is shown-->
         <form>
             <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1><br><br>
+            <h4 style="color: red; display: <%= errorDisplay %>"><%= errorMessage %></h4>
             <fieldset>
                 <label>Target Team Number: <br></label>
                 <input type="tel" name="team" required><br>
