--- a/src/submitted.ejs
+++ b/src/submitted.ejs
@@ -15,6 +15,6 @@
     <body>
         <h1 style="color: #FFB600">Submitted!</h1>
         <h3 style="text-align: center;" class="gameflair1">Redirecting...</h3>
-        <h3>Submission Details: <%= SubmissionDetails %></h3>
+        <h3 style="text-align: center;">Submission Details: <%= SubmissionDetails %></h3>
     </body>
 </html>
