--- a/src/denied.ejs
+++ b/src/denied.ejs
@@ -15,6 +15,6 @@
     <body>
         <h1 style="color: #FF0000">Access Denied!</h1>
         <h3 style="text-align: center;" class="gameflair1">You do not seem to be part of the Team 766 discord server!</h3>
-        <h3>Request Details: <%= SubmissionDetails %></h3>
+        <h3 style="text-align: center;">Request Details: <%= SubmissionDetails %></h3>
     </body>
 </html>
