--- a/src/browse.ejs
+++ b/src/browse.ejs
@@ -29,8 +29,9 @@
 <body>
     <div class="container" id="search" style="display: <%= displaySearch %>;"> <!--flex is shown-->
         <form>
-            <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1><br><br>
+            <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1>
             <h4 style="color: red; display: <%= errorDisplay %>"><%= errorMessage %></h4>
+            <h4>Match Data</h4><br>
             <fieldset>
                 <label>Target Team Number: <br></label>
                 <input type="tel" name="team" required><br>
@@ -51,7 +52,8 @@
     </div>
     <div class="container" id="results" style="display: <%= displayResults %>;"> <!--flex is shown-->
         <div class="dummy">
-            <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1><br><br>
+            <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1>
+            <h4>Match Data</h4><br>
             <fieldset>
             <fieldset>
                 <h3>Team Number: <%= resultsTeamNumber %></h3>
