--- a/src/pitimg.ejs
+++ b/src/pitimg.ejs
@@ -29,8 +29,9 @@
 <body>
     <div class="container" id="search" style="display: <%= displaySearch %>;"> <!--flex is shown-->
         <form>
-            <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1><br><br>
+            <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1>
             <h4 style="color: red; display: <%= errorDisplay %>"><%= errorMessage %></h4>
+            <h4>Image Database</h4><br>
             <fieldset>
                 <label>Target Team Number: <br></label>
                 <input type="tel" name="team" required><br>
@@ -50,11 +51,12 @@
     </div>
     <div class="container" id="results" style="display: <%= displayResults %>;"> <!--flex is shown-->
         <div class="dummy">
-            <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1><br><br>
+            <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1>
+            <h4>Image Database</h4><br>
             <fieldset>
             <fieldset>
                 <h3>Team Number: <%= resultsTeamNumber %></h3>
-                <h5>Match Number:  <%= resultsMatchNumber %> |  Event: <%= resultsEventCode %></h5>
+                <h5>Event: <%= resultsEventCode %></h5>
                 <h5 style="text-align: left"><%- resultsBody %></h5>
             </fieldset>
             <!--buttons-->
