--- a/src/pitimg.ejs
+++ b/src/pitimg.ejs
@@ -46,7 +46,7 @@
             <input type="submit" value="Search" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem;; border-style: solid; border-color: #68C3E2; border-width: 0.875rem;; margin-top: 1rem;"><br>
             <button style="color: #000; background-color: #FFB600; border-radius: 0.5rem;; border-style: solid; border-color: #FFB600; border-width: 0.875rem;; margin-top: 1rem;" onclick="goToHome()">Back</button>
             </fieldset>
-            <small style="text-align: center;">To match scouting data, go <a href="browse" style="all: unset; color: #68C3E2;">here</a></small>
+            <small style="text-align: center;">To see match scouting data, go <a href="browse" style="all: unset; color: #68C3E2;">here</a></small>
         </form>
         <br><br>
     </div>
@@ -64,7 +64,7 @@
             <button style="color: #000; background-color: #68C3E2; border-radius: 0.5rem;; border-style: solid; border-color: #68C3E2; border-width: 0.875rem;; margin-top: 1rem;" onclick='pageControl("bck")'>Previous</button>&emsp;<button style="color: #000; background-color: #68C3E2; border-radius: 0.5rem;; border-style: solid; border-color: #68C3E2; border-width: 0.875rem;; margin-top: 1rem;" onclick='pageControl("fwd")'>Next</button><br>
             <button style="color: #000; background-color: #FFB600; border-radius: 0.5rem;; border-style: solid; border-color: #FFB600; border-width: 0.875rem;; margin-top: 1rem;" onclick="removeURLParams()">New Search</button>
             </fieldset>
-            <small style="text-align: center;">To match scouting data, go <a href="browse" style="all: unset; color: #68C3E2;">here</a></small>
+            <small style="text-align: center;">To see match scouting data, go <a href="browse" style="all: unset; color: #68C3E2;">here</a></small>
     </div>
     </div>
     <script>
