--- a/src/main.ejs
+++ b/src/main.ejs
@@ -16,8 +16,8 @@
         <fieldset>
             <label>Event Code</label><br>
             <select name="event">
-                <option value="CADA">CADA - Sacramento Regional</option>
-                <option value="CASJ" selected>CASJ - Silicon Valley Regional</option>
+                <option value="CADA" selected>CADA - Sacramento Regional</option>
+                <option value="CASJ">CASJ - Silicon Valley Regional</option>
             </select>
         </fieldset>
 
