--- a/src/pit.ejs
+++ b/src/pit.ejs
@@ -17,7 +17,7 @@
                 <fieldset>
                     <label>Event Code</label><br>
                     <select name="event">
-                        <option value="CADA">CADA - Sacramento Regional</option>
+                        <option value="CADA" selected>CADA - Sacramento Regional</option>
                         <option value="CASJ">CASJ - Silicon Valley Regional</option>
                     </select>
                 </fieldset>
