start modifications for iOS PWA

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -4,6 +4,10 @@
     <title>CHARGED UP Scouting</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <meta charset="UTF-8">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="apple-touch-startup-image" href="public/launch.png">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Scouting">
     <link rel="stylesheet" href="2023_float.css" type="text/css">
     <style>
         a,a:visited {
