--- a/src/main.ejs
+++ b/src/main.ejs
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="2023_float.css" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>Match Scouting</title>
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="apple-touch-startup-image" href="public/launch.png">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Scouting">
 </head>
 
 <body>
