--- a/src/submitted.ejs
+++ b/src/submitted.ejs
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <link rel="stylesheet" href="2023_float.css" type="text/css">
     <meta http-equiv="refresh" content="2;/" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="apple-touch-startup-image" href="public/launch.png">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Scouting">
     <title>Form Submitted!</title>
     <style>
         body {
