--- a/src/index.ejs
+++ b/src/index.ejs
@@ -8,6 +8,7 @@
     <link rel="apple-touch-startup-image" href="public/launch.png">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Scouting">
+    <link rel="manifest" href="/app.webmanifest"/>
     <link rel="stylesheet" href="2023_float.css" type="text/css">
     <style>
         a,a:visited {
