--- a/src/matches.ejs
+++ b/src/matches.ejs
@@ -9,6 +9,7 @@
     <link rel="apple-touch-startup-image" href="public/launch.png">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Scouting">
+    <link rel="manifest" href="/app.webmanifest"/>
     <style>
         a,a:visited {
             text-align: center;
