--- a/src/pit.ejs
+++ b/src/pit.ejs
@@ -10,6 +10,7 @@
     <link rel="apple-touch-startup-image" href="public/launch.png">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Scouting">
+    <link rel="manifest" href="/app.webmanifest"/>
 </head>
 
 <body>
