allow notch fixing

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>CHARGED UP Scouting</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover">
     <meta charset="UTF-8">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="apple-touch-startup-image" href="public/launch.png">
@@ -10,6 +10,7 @@
     <meta name="apple-mobile-web-app-title" content="Scouting">
     <link rel="manifest" href="/app.webmanifest"/>
     <link rel="stylesheet" href="2023_float.css" type="text/css">
+    <meta name="mobile-web-app-capable" content="yes">
     <style>
         a,a:visited {
             text-align: center;
