add breaks between images

--- a/src/pit.ejs
+++ b/src/pit.ejs
@@ -88,13 +88,13 @@
                 <fieldset>
                     <label>Images</label>
                     <label>Image 1</label>
-                    <input type="file" name="image1" accept="image/png, image/jpeg" required>
+                    <input type="file" name="image1" accept="image/png, image/jpeg" required><br>
                     <label>Image 2</label>
-                    <input type="file" name="image2" accept="image/png, image/jpeg" required>
+                    <input type="file" name="image2" accept="image/png, image/jpeg" required><br>
                     <label>Image 3</label>
-                    <input type="file" name="image3" accept="image/png, image/jpeg" required>
+                    <input type="file" name="image3" accept="image/png, image/jpeg" required><br>
                     <label>Image 4</label>
-                    <input type="file" name="image4" accept="image/png, image/jpeg" required>
+                    <input type="file" name="image4" accept="image/png, image/jpeg" required><br>
                     <label>Image 5</label>
                     <input type="file" name="image5" accept="image/png, image/jpeg" required>
                 </fieldset>
