--- a/src/pit.ejs
+++ b/src/pit.ejs
@@ -86,7 +86,7 @@
                 </fieldset>
 
                 <fieldset>
-                    <label>Images</label>
+                    <label>Images</label><br>
                     <label>Image 1</label>
                     <input type="file" name="image1" accept="image/png, image/jpeg" required><br>
                     <label>Image 2</label>
