finish homepage different based on user's roles

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -81,10 +81,10 @@
             <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP℠</span></h1>
             <h3><span style="color: rgb(88, 101, 242); background-color: rgba(88, 101, 242, 0.1); border-radius: 4px; padding: 5px;" id="profileName"><%= userName %></span><span>&emsp;</span><span id="rolesDisplay"><%- rolesBody %></span></h3><br>
             <div style="display: flex; flex-direction: column;">
-            <a href="main" class="gameflair1" style="order: 0; margin-bottom: 5%;">Match Scouting<br></a>
-            <a href="browse" class="gameflair1" style="order: 1; margin-bottom: 5%;">Browse Data<br></a>
-            <a href="matches" class="gameflair1" style="order: 3; margin-bottom: 5%;">Match List<br></a>
-            <a href="pit" class="gameflair1" style="order: 2; margin-bottom: 5%;">Pit Scouting<br></a>
+            <a href="main" class="gameflair1" style="order: <%- order1 %>; margin-bottom: 5%;">Match Scouting<br></a>
+            <a href="browse" class="gameflair1" style="order: <%- order2 %>; margin-bottom: 5%;">Browse Data<br></a>
+            <a href="matches" class="gameflair1" style="order: <%- order3 %>; margin-bottom: 5%;">Match List<br></a>
+            <a href="pit" class="gameflair1" style="order: <%- order4 %>; margin-bottom: 5%;">Pit Scouting<br></a>
             </div>
             <br><br><br>
         </form>
