rename pages with pattern

--- a/src/denied.ejs
+++ b/src/denied.ejs
@@ -11,7 +11,7 @@
     <meta name="apple-mobile-web-app-title" content="Scouting">
     <link rel="manifest" href="/app.webmanifest"/>
     <meta name="mobile-web-app-capable" content="yes">
-    <title>Access Denied!</title>
+    <title>Access Denied - 766 Scouting</title>
     <style>
         body {
             vertical-align: middle;
