--- a/src/matches.ejs
+++ b/src/matches.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>CHARGED UP Scouting Data</title>
+    <title>Matches - 766 Scouting</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="2023_float.css" type="text/css">
