--- a/src/denied.ejs
+++ b/src/denied.ejs
@@ -20,7 +20,7 @@
 </head>
     <body>
         <h1 style="color: #FF0000">Access Denied!</h1>
-        <h3 style="text-align: center;" class="gameflair1">You do not seem to be part of the Team 766 discord server!</h3>
+        <h3 style="text-align: center;" class="gameflair1">You do not seem to be part of the Team 766 discord server<br>Alternatively, you do not have permission to access the requested resource!</h3>
         <h3 style="text-align: center;">Request Details: <%= SubmissionDetails %></h3>
     </body>
 </html>
