rename to delete.ejs

--- a/src/delete.ejs
+++ b/src/delete.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Manage Data - 766 Scouting</title>
+    <title>Delete Data - 766 Scouting</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover">
     <meta charset="UTF-8">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -36,7 +36,7 @@
     <div class="container" id="search" style="display: <%= displaySearch %>;"> <!--flex is shown-->
         <form>
             <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1>
-            <h4>Manage Data</h4><br>
+            <h4>Delete Data</h4><br>
             <fieldset>
                 <label>Submission ID: <br></label>
                 <input type="tel" name="submissionID" required><br>
