--- a/src/index.ejs
+++ b/src/index.ejs
@@ -85,6 +85,7 @@
             <a href="browse" class="gameflair1" style="order: <%- order2 %>; margin-bottom: 5%;">Browse Data<br></a>
             <a href="matches" class="gameflair1" style="order: <%- order3 %>; margin-bottom: 5%;">Match List<br></a>
             <a href="pit" class="gameflair1" style="order: <%- order4 %>; margin-bottom: 5%;">Pit Scouting<br></a>
+            <%- additionalURLs %>
             </div>
             <br><br><br>
         </form>
