add link to offline version

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -90,6 +90,7 @@
             <br><br><br>
         </form>
     </div>
+    <br><small><a href="offline.html" style="all: unset;">Access Offline Version</a></small>
     <script>
         function updatePWACache() {
                 caches.keys().then((keyList) => {
