--- a/src/index.ejs
+++ b/src/index.ejs
@@ -70,7 +70,7 @@
     </style>
     <script>
     if ("serviceWorker" in navigator) {
-        navigator.serviceWorker.register("/sw.js");
+        navigator.serviceWorker.register("sw.js");
         console.log("registered sw");
     }
     </script>
