--- a/src/index.ejs
+++ b/src/index.ejs
@@ -69,12 +69,24 @@
         }
     </style>
     <script>
+    const registerServiceWorker = async () => {
     if ("serviceWorker" in navigator) {
-        window.addEventListener('load', function() {
-            navigator.serviceWorker.register('/sw.js');
-            console.log("registered sw");
+        try {
+        const registration = await navigator.serviceWorker.register("/sw.js", {
+            scope: "/",
         });
+        if (registration.installing) {
+            console.log("sw installing");
+        } else if (registration.waiting) {
+            console.log("sw installed");
+        } else if (registration.active) {
+            console.log("sw active");
+        }
+        } catch (error) {
+        console.error(`sw failed` + error);
+        }
     }
+    };
     </script>
 </head>
 <body>
