--- a/src/index.ejs
+++ b/src/index.ejs
@@ -68,27 +68,7 @@
             display:inline;
         }
     </style>
-    <script>
-    const registerServiceWorker = async () => {
-    if ("serviceWorker" in navigator) {
-        try {
-        const registration = await navigator.serviceWorker.register("/sw.js", {
-            scope: "/",
-        });
-        if (registration.installing) {
-            console.log("sw installing");
-        } else if (registration.waiting) {
-            console.log("sw installed");
-        } else if (registration.active) {
-            console.log("sw active");
-        }
-        } catch (error) {
-        console.error(`sw failed` + error);
-        }
-    }
-    };
-    registerServiceWorker();
-    </script>
+    <script src="appinstall.js"></script>
 </head>
 <body>
     <div class="container">
